Add module name to page title.
Jira issue: wp-1196

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
     <div id="show-menu" class="header-left-button"></div>
     <img class="webinoslogo-header" src="static/img/webinosWithBorder.png">
 
-    <div class="title">SETTINGS</div>
+    <div class="title">{currentModule}</div>
     <div id="show-actions" class="header-right-button"></div>
 </div>
 {?modules}
